2005-10-30  Andrew Cagney  <cagney@redhat.com>

	* LinuxHost.java: Update to track frys.sys.proc changes,
	AuxvBuilder and IdBuilder replacing ScanDir and
	AuxiliaryVectorBuilder.
	* LinuxProc.java: Ditto.
	
	* TestProcGet.java: Fix typo, auxv.val not auxv.type.
	* Proc.java: Add .sendrecAuxv.  Implement .getAuxv locally.
	* LinuxProc.java: Replace .getAuxv with .sendrecAuxv.  Use
	frysk.sys.proc.AuxiliaryVectorBuilder to construct the auxv.
	* Auxv.java: Simplify.

	* TestLib.java: Fix tipo, TaskObserverBase, not TaskObserverBaseX.
	* TestProcGet.java: Reimplement CaptureAuxv by extending TestLib
	.AutoAddTaskObserverBase.
	* TestUnpaused.java: For TaskObserver's extend TaskObserverBase.
	* TestSyscallOpen.java: Ditto.
	* TestSyscall.java: Ditto.
	* TestSyscall2.java: Ditto.
	* TestStep.java: Ditto.
	* TestModify.java: Ditto.
	* TestI386Regs.java: Ditto.
	* TestI386Modify.java: Ditto.

	* TestLib.java: Split .TaskObserverBase, creating
	.AutoAddTaskObserverBase sub-class.  Use AutoAddTaskObserverBase
	throughout.
	* TestUnpaused.java, TestTaskTerminateObserver.java,
	TestTaskObserver.java, TestTaskForkedObserver.java,
	TestTaskClonedObserver.java, TestStop.java, TestStopAndStop.java,
	TestStopAndGo.java, TestStep.java, TestPaused.java,
	TestGoAndGo.java: Ditto.
	
	* TestLib.java: Split out .TaskSet from .TaskObserverBase.
	* TestTaskObserver.java, TestTaskForkedObserver.java,
	TestTaskClonedObserver.java: Update, add explict TaskSet.
	
	* TestUnpaused.java, TestStep.java, TestModify.java,
	TestI386Regs.java, TestI386Modify.java: Replace TaskEvent
	.Signaled, with TaskObserver .Signaled.
	* TaskObserver.java: Fix typo, rename .Signaled updateTerminated
	to .updateSignaled.
	* Task.java: Add .signaledObservers, .notifySignaled,
	.requestDeleteSignaledObserver, .requestAddSignaledObserver.
	* TaskState.java: Add class .BlockedSignal.  Rename .blocked to
	.blockedContinue.  Handle .processRequestAddObserver in .unpaused
	state.
	* TaskEvent.java: Delete .Signaled.
